--- a/frontend/src/category/CategoryTile.css
+++ b/frontend/src/category/CategoryTile.css
@@ -83,6 +83,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 999;
 }
 
 .modal {
@@ -90,6 +91,7 @@
   padding: 20px;
   border-radius: 20px;
   width: 500px;
+  z-index: 1000;
 }
 
 .modal-form {
