--- a/frontend/src/products/CategoryFilter.css
+++ b/frontend/src/products/CategoryFilter.css
@@ -84,7 +84,7 @@
 }
 
 .create:hover {
-  background-color: #1c84ff;
+  background-color: #5da0f1;
 }
 
 .Btw {
@@ -93,6 +93,12 @@
   align-items: center;
   gap: 20px;
   margin-right: 30px;
+}
+
+.handle-button {
+  margin-top: 20px;
+  text-align: right;
+  margin-right: 20px;
 }
 
 @keyframes spin {
